--- a/public/main.html
+++ b/public/main.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html ng-app='pettts'>
+<html ng-app="pettts">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Online pets marketplace">
     <meta name="keywords" content="Pets,Sell,Exchange,Mate,Shelter,Buy">
     <meta name="author" content="Hackslash">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="/">
     <title>pettts</title>
 
     <!-- stylesheets -->
@@ -14,8 +15,20 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
 
+    <!-- JS -->
+    <script src="libs/angular/angular.min.js"></script>
+    <script src="libs/angular-route/angular-route.min.js"></script>
+
+    <!--Main app-->
+    <script src="js/app.js"></script>
+    <!-- controllers -->
+    <script type="text/javascript" src="js/services/indexService.js"></script>
+    <script type="text/javascript" src="js/controllers/indexController.js"></script>
+    <script type="text/javascript" src="js/appRoutes.js"></script>
+
+
   </head>
-  <body>
+  <body ng-controller = "indexCtrl">
     <!-- Header -->
     <header>
       <!-- Navigation bar -->
@@ -84,8 +97,7 @@
     </footer>
     <!-- End of footer -->
 
-    <!-- scripts  -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+
 
   </body>
 </html>
