--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
     <!--Main app-->
     <script src="js/app.js"></script>
     <!-- controllers -->
-    <script type="text/javascript" src="js/services/indexService.js"></script>
-    <script type="text/javascript" src="js/controllers/indexController.js"></script>
+    <script type="text/javascript" src="js/services/postsService.js"></script>
+    <script type="text/javascript" src="js/controllers/postsController.js"></script>
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
 
   </head>
-  <body ng-controller = "indexCtrl">
+  <body>
     <!-- Header -->
     <header>
       <!-- Navigation bar -->
