--- a/public/main.html
+++ b/public/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="pettts">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="description" content="Online pets marketplace">
     <meta name="keywords" content="Pets,Sell,Exchange,Mate,Shelter,Buy">
@@ -18,11 +19,9 @@
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
-    <script src="libs/angular-route/angular-route.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.1/angular-cookies.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.1/angular-cookies.min.js"></script>
 
-<!--     <script src="libs/angular-cookies/angular-cookies.js"></script>
- -->
+    <!--     <script src="libs/angular-cookies/angular-cookies.js"></script> -->
 
 
     <!--Main app-->
@@ -30,64 +29,68 @@
     <!-- controllers -->
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
+
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
 
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- Header -->
     <header>
-      <!-- Navigation bar -->
-      <nav class="navbar navbar-default">
-        <div class="container navbar-content">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-default">
+            <div class="container navbar-content">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">pettts.com</a>
-          </div>
+                    <a class="navbar-brand" href="#">pettts.com</a>
+                </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-            <ul class="nav navbar-nav navbar-right">
-              <!-- Search bar -->
-              <form class="navbar-form navbar-left">
-                <div class="input-group stylish-input-group">
-                    <input type="text" class="form-control" id="search-input" placeholder="What are you looking for?" >
-                    <span class="input-group-addon">
+                    <ul class="nav navbar-nav navbar-right">
+                        <!-- Search bar -->
+                        <form class="navbar-form navbar-left">
+                            <div class="input-group stylish-input-group">
+                                <input type="text" class="form-control" id="search-input" placeholder="What are you looking for?">
+                                <span class="input-group-addon">
                         <button type="submit">
                             <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
+                                </button>
+                                </span>
+                            </div>
+                        </form>
+                        <li><a href="#">Register</a></li>
+                        <li><a href="/login">Login</a></li>
+                    </ul>
                 </div>
-              </form>
-              <li><a href="#">Register</a></li>
-              <li><a href="#">Login</a></li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
 
-      <!-- Categories bar -->
-      <div class="categories-container">
-        <div class="container">
-          <div class="row">
-            <ul id="categories" class="nav nav-pills justified">
-              <li><a href="#">Buy</a></li>
-              <li><a href="#">Exchange</a></li>
-              <li><a href="#">Shelter</a></li>
-              <li><a href="#">Get your pet a date</a></li>
-              <li><a href="#">Lost & Found</a></li>
-            </ul>
-          </div>
+        <!-- Categories bar -->
+        <div class="categories-container">
+            <div class="container">
+                <div class="row">
+                    <ul id="categories" class="nav nav-pills justified">
+                        <li><a href="#">Buy</a></li>
+                        <li><a href="#">Exchange</a></li>
+                        <li><a href="#">Shelter</a></li>
+                        <li><a href="#">Get your pet a date</a></li>
+                        <li><a href="#">Lost & Found</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
 
     </header>
     <!-- End of Header -->
@@ -98,15 +101,16 @@
 
     <!-- Footer -->
     <footer>
-      <div class="container">
-        <div class="row">
-          <p class="text-center copyright">Copyright &copy 2017 pettts.com</p>
+        <div class="container">
+            <div class="row">
+                <p class="text-center copyright">Copyright &copy 2017 pettts.com</p>
+            </div>
         </div>
-      </div>
     </footer>
     <!-- End of footer -->
 
 
 
-  </body>
+</body>
+
 </html>
