--- a/public/main.html
+++ b/public/main.html
@@ -30,6 +30,9 @@
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
 
+    <script type="text/javascript" src="js/services/postService.js"></script>
+    <script type="text/javascript" src="js/controllers/postController.js"></script>
+
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
@@ -70,6 +73,7 @@
                         </form>
                         <li><a href="#">Register</a></li>
                         <li><a href="/login">Login</a></li>
+
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -94,6 +98,7 @@
 
     </header>
     <!-- End of Header -->
+    <li><a href="/post/new">add post</a></li>
 
     <div ng-view>
 
