--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.1/angular-cookies.min.js"></script>
 
     <!--Main app-->
     <script src="js/app.js"></script>
