--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                 </div>
               </form>
               <li><a href="#">Register</a></li>
-              <li><a href="#">Login</a></li>
+              <li><a href="/login">Login</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
