fixed errors form submit

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
+
+    <script type="text/javascript" src="js/services/postService.js"></script>
+    <script type="text/javascript" src="js/controllers/postController.js"></script>
+
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
 
@@ -86,7 +90,7 @@
 
     </header>
     <!-- End of Header -->
-
+    <li><a href="/post/new">add post</a></li>
     <div ng-view></div>
 
     <!-- Footer -->
