--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
     <script type="text/javascript" src="js/appRoutes.js"></script>
+    <script type="text/javascript" src="js/registerController.js"></script>
+    <script type="text/javascript" src="js/registerService.js"></script>
 
 
   </head>
@@ -62,7 +64,7 @@
                     </span>
                 </div>
               </form>
-              <li><a href="#">Register</a></li>
+              <li><a href="/register">Register</a></li>
               <li><a href="/login">Login</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
