--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
+    
+    <script type="text/javascript" src="js/controllers/pass_ctrl.js"></script>
+
 
     <script type="text/javascript" src="js/services/postService.js"></script>
     <script type="text/javascript" src="js/controllers/postController.js"></script>
