--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
-
+    <script type="text/javascript" src="js/controllers/searchController.js"></script>
+    <script type="text/javascript" src="js/services/searchService.js"></script>
     <script type="text/javascript" src="js/services/postService.js"></script>
     <script type="text/javascript" src="js/controllers/postController.js"></script>
-
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
 
@@ -56,11 +56,14 @@
 
             <ul class="nav navbar-nav navbar-right">
               <!-- Search bar -->
-              <form class="navbar-form navbar-left">
+
+              <form  class="navbar-form navbar-left" ng-controller="searchController" ng-submit = "submitSearch()">
                 <div class="input-group stylish-input-group">
-                    <input type="text" class="form-control" id="search-input" placeholder="What are you looking for?" >
+              <input type="text" class="form-control" id="search-input" placeholder="What are you looking for?"
+              ng-model="formData.searchKey">
+
                     <span class="input-group-addon">
-                        <button type="submit">
+                        <button type="submit" >
                             <span class="glyphicon glyphicon-search"></span>
                         </button>
                     </span>
