filter works el7

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <!-- controllers -->
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
+    <script type="text/javascript" src="js/services/filterService.js"></script>
     <script type="text/javascript" src="js/controllers/filterController.js"></script>
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
