--- a/public/index.html
+++ b/public/index.html
@@ -76,11 +76,13 @@
         <div class="container">
           <div class="row">
             <ul id="categories" class="nav nav-pills justified">
-              <li><a href="#">Buy</a></li>
-              <li><a href="#">Exchange</a></li>
-              <li><a href="#">Shelter</a></li>
-              <li><a href="#">Get your pet a date</a></li>
-              <li><a href="#">Lost & Found</a></li>
+              <li><a href="/posts">All Categories</a></li>
+              <li><a href="/posts/buy">Buy</a></li>
+              <li><a href="/posts/exchange">Exchange</a></li>
+              <li><a href="/posts/shelter">Shelter</a></li>
+              <li><a href="/posts/mate">Get your pet a date</a></li>
+              <li><a href="/posts/lost">Lost</a></li>
+              <li><a href="/posts/found">Found</a></li>
             </ul>
           </div>
         </div>
