--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
-
+    <script type="text/javascript" src="js/controllers/reviewPostController.js"></script>
+    <script type="text/javascript" src="js/services/reviewPostService.js"></script>
     <script type="text/javascript" src="js/services/postService.js"></script>
     <script type="text/javascript" src="js/controllers/postController.js"></script>
-
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
 
