Search Done Working Well

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
     <!-- controllers -->
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
+    <script type="text/javascript" src="js/controllers/searchDirectionController.js"></script>
     <script type="text/javascript" src="js/services/filterService.js"></script>
     <script type="text/javascript" src="js/controllers/filterController.js"></script>
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/searchController.js"></script>
-    <script type="text/javascript" src="js/controllers/testController.js"></script>
     <script type="text/javascript" src="js/services/searchService.js"></script>
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
@@ -60,7 +60,7 @@
             <ul class="nav navbar-nav navbar-right">
               <!-- Search bar -->
 
-              <form  class="navbar-form navbar-left"  ng-controller="testController" ng-submit="submitSearch()" >
+              <form  class="navbar-form navbar-left"  ng-controller="searchDirectionController" ng-submit="submitSearch()" >
                 <div class="input-group stylish-input-group">
                   <input type="text" class="form-control" id="search-input" placeholder="What are you looking for?"
                   ng-model="searchKey">
