ViewMore Working in Cosnole

--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,15 @@
     <script type="text/javascript" src="js/services/filterService.js"></script>
     <script type="text/javascript" src="js/controllers/filterController.js"></script>
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
-
     <script type="text/javascript" src="js/controllers/reviewPostController.js"></script>
     <script type="text/javascript" src="js/services/reviewPostService.js"></script>
     <script type="text/javascript" src="js/services/postService.js"></script>
     <script type="text/javascript" src="js/controllers/postController.js"></script>
-    <script type="text/javascript" src="js/appRoutes.js"></script>    
+    <script type="text/javascript" src="js/appRoutes.js"></script>
     <script type="text/javascript" src="js/services/profileService.js"></script>
     <script type="text/javascript" src="js/controllers/profileCtrl.js"></script>
     <script type="text/javascript" src="js/controllers/registerController.js"></script>
+    <script type="text/javascript" src="js/controllers/viewMoreDirectionController.js"></script>
     <script type="text/javascript" src="js/services/registerService.js"></script>
 
     <script type="text/javascript" src="js/appRoutes.js"></script>
