--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
     <script type="text/javascript" src="js/controllers/postController.js"></script>
     <script type="text/javascript" src="js/controllers/registerController.js"></script>
     <script type="text/javascript" src="js/services/registerService.js"></script>
+    <script type="text/javascript" src="js/controllers/reviewPostController.js"></script>
+    <script type="text/javascript" src="js/services/reviewPostService.js"></script>
+    <script type="text/javascript" src="js/controllers/viewMoreDirectionController.js"></script>
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
   </head>
