working on styles

--- a/public/index.html
+++ b/public/index.html
@@ -24,22 +24,34 @@
 
     <!--Main app-->
     <script src="js/app.js"></script>
+
     <!-- controllers -->
     <script type="text/javascript" src="js/services/postsService.js"></script>
     <script type="text/javascript" src="js/controllers/postsController.js"></script>
+
     <script type="text/javascript" src="js/controllers/searchDirectionController.js"></script>
+
     <script type="text/javascript" src="js/services/filterService.js"></script>
     <script type="text/javascript" src="js/controllers/filterController.js"></script>
+
     <script type="text/javascript" src="js/controllers/loginCtrl.js"></script>
+
     <script type="text/javascript" src="js/controllers/searchController.js"></script>
     <script type="text/javascript" src="js/services/searchService.js"></script>
+
     <script type="text/javascript" src="js/services/profileService.js"></script>
     <script type="text/javascript" src="js/controllers/profileCtrl.js"></script>
+
     <script type="text/javascript" src="js/controllers/pass_ctrl.js"></script>
+
     <script type="text/javascript" src="js/services/postService.js"></script>
     <script type="text/javascript" src="js/controllers/postController.js"></script>
+
     <script type="text/javascript" src="js/controllers/registerController.js"></script>
     <script type="text/javascript" src="js/services/registerService.js"></script>
+
+    <script type="text/javascript" src="js/controllers/viewMoreDirectionController.js"></script>
+
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
   </head>
