--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <base href="/">
     <title>pettts</title>
 
+    <!-- icon -->
+    <link rel="icon" href="./images/icon-pic.png">
+
     <!-- stylesheets -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/header.css">
