--- a/public/index.html
+++ b/public/index.html
@@ -119,12 +119,12 @@
                 <div class="row">
                     <ul id="categories" class="nav nav-pills justified">
                         <li><a href="/posts">All Categories</a></li>
-                        <li><a href="/posts/buy">Buy</a></li>
-                        <li><a href="/posts/exchange">Exchange</a></li>
-                        <li><a href="/posts/shelter">Shelter</a></li>
-                        <li><a href="/posts/mate">Get your pet a date</a></li>
-                        <li><a href="/posts/lost">Lost</a></li>
-                        <li><a href="/posts/found">Found</a></li>
+                        <li><a href="/posts/f/buy">Buy</a></li>
+                        <li><a href="/posts/f/exchange">Exchange</a></li>
+                        <li><a href="/posts/f/shelter">Shelter</a></li>
+                        <li><a href="/posts/f/mate">Get your pet a date</a></li>
+                        <li><a href="/posts/f/lost">Lost</a></li>
+                        <li><a href="/posts/f/found">Found</a></li>
                     </ul>
                 </div>
             </div>
