added info page and route

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,12 @@
     <footer>
         <div class="container">
             <div class="row">
-                <p class="text-center copyright">Copyright &copy 2017 pettts.com</p>
+                <div class="col-md-4">
+                    <p class="text-left copyright">Copyright &copy 2017 pettts.com</p>
+                </div>
+                <div class="col-md-8">
+                    <p class="text-right copyright"><a href="/info">About us</a></p>
+                </div>
             </div>
         </div>
     </footer>
