--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-                    <a class="navbar-brand" href="/posts">pettts.com</a>
+                    <a class="navbar-brand" href="/">pettts.com</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,7 +87,7 @@
 
                         <form class="navbar-form navbar-left" ng-controller="searchDirectionController" ng-submit="submitSearch()">
                             <div class="input-group stylish-input-group">
-                                <input type="text" class="form-control" id="search-input" placeholder="What are you looking for?" ng-model="searchKey">
+                                <input type="text" class="form-control" id="search-input" placeholder="What species are you looking for?(e.g. Cat, Dog)" ng-model="searchKey">
 
                                 <span class="input-group-addon">
                                   <button type="submit" >
