--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,9 @@
     <script type="text/javascript" src="js/services/reviewPostService.js"></script>
     <script type="text/javascript" src="js/controllers/viewMoreDirectionController.js"></script>
 
+    <script type="text/javascript" src="js/controllers/verificationCtrl.js"></script>
+    <script type="text/javascript" src="js/services/verificationService.js"></script>
+
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
 </head>
