--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,10 @@
     </footer>
     <!-- End of footer -->
 
+    <!-- including jquery & bootstrap javascript file  -->
+    <script type="text/javascript" src="js/custom/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/custom/bootstrap.min.js"></script>
+
 
 <style>
     #logout {
