--- a/public/index.html
+++ b/public/index.html
@@ -106,9 +106,9 @@
                         <li>
                             <form action="/charge" method="post">
                                 <!-- Specify auto in data-locale to display Checkout in the user's preferred language, if available. English will be used by default. -->
-                                <!--<script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="pk_test_nq90wwD2raOVJ8YN6pLtdgCT" data-amount="200" data-name="Advertisement" data-description="For any Client how wants to put advertisements on our website" data-locale="auto"
+                                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="pk_test_nq90wwD2raOVJ8YN6pLtdgCT" data-amount="200" data-name="Advertisement" data-description="For any Client how wants to put advertisements on our website" data-locale="auto"
                                     data-currency="gbp">
-                                </script>-->
+                                </script>
                             </form>
                         </li>
                     </ul>
