Initial commit. Initialize pages.

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
     <script type="text/javascript" src="js/controllers/searchCtrl.js"></script>
     <script type="text/javascript" src="js/services/searchService.js"></script>
 
+    <script type="text/javascript" src="js/controllers/advSearchCtrl.js"></script>
+    <script type="text/javascript" src="js/services/advSearchService.js"></script>
+
     <script type="text/javascript" src="js/services/profileService.js"></script>
     <script type="text/javascript" src="js/controllers/profileCtrl.js"></script>
 
@@ -96,6 +99,7 @@
                                   <button type="submit" >
                                     <span class="glyphicon glyphicon-search"></span>
                                   </button>
+                                  <a href="/advanced">Advanced</a>
                                 </span>
                             </div>
                         </form>
