--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
                                   <button type="submit" >
                                     <span class="glyphicon glyphicon-search"></span>
                                   </button>
-                                  <a href="/advanced">Advanced</a>
+                                  <a data-toggle="modal" data-target="#myModal-search">Advanced</a>
                                 </span>
                             </div>
                         </form>
@@ -162,6 +162,44 @@
     <!-- including jquery & bootstrap javascript file  -->
     <script type="text/javascript" src="js/custom/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/custom/bootstrap.min.js"></script>
+
+    <!-- Advanced search modal -->
+    <div id="myModal-search" class="modal fade" ng-controller="advSearchCtrl">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>This is the advanced Search.</h2>
+                    <h4>Here you can search posts, not only by species, but also kind and filter the posts by type.</h4>
+                </div>
+                <div class="modal-body">
+                    <form name="messageForm" ng-controller="profileCtrl" ng-submit="advancedSearch()">
+                        <div class="form-group">
+                            <label for="species">Search by Species</label> <br>
+                            <input type="text" class="form-control" name="species" placeholder="Species (e.g. Cat, Dog)" ng-model="species">
+                        </div>
+                        <div class="form-group">
+                            <label for="kind">Search by Kind</label> <br>
+                            <input type="text" class="form-control" name="kind" placeholder="Kind (e.g. Siamese, Labrador)" ng-model="kind">
+                        </div>
+                        <div class="form-group">
+                            <label for="type">Filter by Post Type</label> <br>
+                            <input type="radio" name="type" ng-model="type" required value="sell"> Sell
+                            <input type="radio" name="type" ng-model="type" required value="exchange"> Exchange
+                            <input type="radio" name="type" ng-model="type" required value="mate"> Mate
+                            <input type="radio" name="type" ng-model="type" required value="lost"> Lost
+                            <input type="radio" name="type" ng-model="type" required value="found"> Found
+                            <input type="radio" name="type" ng-model="type" required value="shelter"> Shelter
+                        </div>
+                        <button type="submit" class="btn btn-success" id="send-btn">Search</button>
+                        <div ng-if="messageIndicator" class="alert alert-info"></div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 <style>
     #logout {
