Finished a primitive Advanced search

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
 
     <script type="text/javascript" src="js/controllers/advSearchDirectionCtrl.js"></script>
     <script type="text/javascript" src="js/services/advSearchService.js"></script>
+    <script type="text/javascript" src="js/controllers/advSearchCtrl.js"></script>
 
     <script type="text/javascript" src="js/services/profileService.js"></script>
     <script type="text/javascript" src="js/controllers/profileCtrl.js"></script>
@@ -164,7 +165,7 @@
     <script type="text/javascript" src="js/custom/bootstrap.min.js"></script>
 
     <!-- Advanced search modal -->
-    <div id="myModal-search" class="modal fade" ng-controller="advSearchCtrl">
+    <div id="myModal-search" class="modal fade" ng-controller="advSearchDirectionCtrl">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
