report frontend done for posts page only

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,9 @@
     <script type="text/javascript" src="js/controllers/verificationCtrl.js"></script>
     <script type="text/javascript" src="js/services/verificationService.js"></script>
 
+    <script type="text/javascript" src="js/controllers/reportCtrl.js"></script>
+    <script type="text/javascript" src="js/services/reportService.js"></script>
+
     <script type="text/javascript" src="js/appRoutes.js"></script>
 
 </head>
